--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 body {
-    margin: 0;
+    /* margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
       'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
       sans-serif;
@@ -13,9 +13,9 @@ body {
     align-items: center;
     justify-content: center;
     height: 100vh;
-    margin: 0;
+    margin: 0; */
     background-image: url('https://static.vecteezy.com/system/resources/previews/027/742/660/non_2x/online-robot-chatbot-head-icon-style-illustration-on-dark-blue-background-vector.jpg'); 
-    background-size: cover;
+    /* background-size: cover; */
   }
   
   
